--- a/catkin_botlers/src/gazebo_world/config/robot_localization.yaml
+++ b/catkin_botlers/src/gazebo_world/config/robot_localization.yaml
@@ -19,7 +19,7 @@ imu0_config: [false, false, false,
 imu0_differential: false
 
 odom_frame: odom
-base_link_frame: jackal_link
+base_link_frame: base_link
 world_frame: odom
 
 predict_to_current_time: true
