--- a/catkin_botlers/.vscode/settings.json
+++ b/catkin_botlers/.vscode/settings.json
@@ -2,5 +2,9 @@
     "python.autoComplete.extraPaths": [
         "/home/ur3/MBM/ECE470-Robot/catkin_botlers/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/ur3/MBM/ECE470-Robot/catkin_botlers/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
     ]
 }
